# stdpar_connected_components

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CCL.cpp  CCL.h  main.cpp  reduction.h  timer.h  utils.hpp
